--- a/app/views/locations/_form.html.slim
+++ b/app/views/locations/_form.html.slim
@@ -1,5 +1,10 @@
 = simple_form_for(@location) do |f|
-  = f.error_notification
+  - if @location.errors.any?
+    .alert.alert-danger.alert-dismissable
+      button.close type="button" data-dismiss="alert"
+        span aria-hidden="true" &times;
+        span.sr-only Close
+      h4 = t('.error')
 
   section
     .col-md-6
