--- a/app/views/categories/_form.html.slim
+++ b/app/views/categories/_form.html.slim
@@ -1,6 +1,10 @@
 = simple_form_for(@category) do |f|
-  = f.error_notification
-
+  - if @category.errors.any?
+    .alert.alert-danger.alert-dismissable
+      button.close type="button" data-dismiss="alert"
+        span aria-hidden="true" &times;
+        span.sr-only Close
+      h4 = t('.error')
   section
     .col-md-6
       .form-inputs
