--- a/app/views/categories/edit.html.slim
+++ b/app/views/categories/edit.html.slim
@@ -1,5 +1,20 @@
 - page_title_for @category, :name
 .page-header
+  = delete_link @category
   h2 = title_for @category
 
 = render 'form'
+
+- if @category.parent?
+  .row
+    label.col-md-2 => Category.human_attribute_name(:categories)
+    .col-md-10
+      ul.list-unstyled
+        - @category.categories.each do |category|
+          li = link_to "#{category.name} (#{category.seminars.count})", edit_category_url(category)
+- else
+  .row
+    label.col-md-2 => Category.human_attribute_name(:category)
+    .col-md-10 = link_to "#{@category.category.name} (#{@category.category.seminars.count})", edit_category_url(@category.category)
+
+= render 'seminars/table', seminars: @category.seminars
