--- a/app/views/categories/index.html.slim
+++ b/app/views/categories/index.html.slim
@@ -6,7 +6,7 @@
 ul
   - @categories.each do |category|
     li
-      = link_to "#{category.name} (#{category.seminars.count})", category
+      = link_to "#{category.name} (#{category.seminars.count})", edit_category_url(category)
       ul
         - category.categories.each do |sub_cat|
-          li = link_to "#{sub_cat.name} (#{sub_cat.seminars.count})", sub_cat
+          li = link_to "#{sub_cat.name} (#{sub_cat.seminars.count})", edit_category_url(sub_cat)
