--- a/app/views/teachers/_form.html.slim
+++ b/app/views/teachers/_form.html.slim
@@ -13,21 +13,19 @@
         = f.input :first_name
         = f.input :last_name
         = f.input :profession, as: :text, input_html: { rows: 5 }
-        /= f.input :address
-        /= f.input :contact
 
     .col-md-4
       = f.simple_fields_for :address, f.object.address do |a|
-        = a.input :street
-        = a.input :zip
-        = a.input :city
+        = a.input :street, required: false
+        = a.input :zip,    required: false
+        = a.input :city,   required: false
 
     .col-md-4
       = f.simple_fields_for :contact, f.object.contact do |c|
-        = c.input :email, as: :email
-        = c.input :phone, as: :tel
-        = c.input :fax, as: :tel
-        = c.input :mobile, as: :tel
+        = c.input :email,  as: :email, required: false
+        = c.input :phone,  as: :tel, required: false
+        = c.input :fax,    as: :tel, required: false
+        = c.input :mobile, as: :tel, required: false
 
   section.action-buttons
     .col-md-12
