--- a/app/views/teachers/edit.html.slim
+++ b/app/views/teachers/edit.html.slim
@@ -1,5 +1,8 @@
 - page_title_for @teacher, :name
 .page-header
+  = delete_link @teacher
   h2 = title_for @teacher
 
 = render 'form'
+
+= render 'seminars/table', seminars: @teacher.seminars
