Seminar views with category tree navigation

--- a/app/assets/stylesheets/page-header.sass
+++ b/app/assets/stylesheets/page-header.sass
@@ -1,6 +1,6 @@
 .page-header
-  a.btn
+  .buttons
     float: right
 
-  a.btn + a.btn
-    margin-right: 8px
+    //a.btn + a.btn
+      margin-right: 8px
