--- a/app/assets/stylesheets/1st_load_framework.css.sass
+++ b/app/assets/stylesheets/1st_load_framework.css.sass
@@ -32,11 +32,12 @@ img
 // apply styles to HTML elements
 // to make views framework-neutral
 main
-  @extend .container
+  @extend .container-fluid
   //background-color: #eee;
   padding-bottom: 80px
   //width: 100%;
-  margin-top: 51px // accommodate the navbar
+  //margin-top: 51px // accommodate the navbar
+  margin: 51px 70px 0
 section
   @extend .row
   margin-top: 20px
