--- a/app/views/seminars/index.html.slim
+++ b/app/views/seminars/index.html.slim
@@ -1,27 +1,41 @@
 - page_title_for @seminars
-.page-header
-  .buttons = new_link new_seminar_path
-  h2 = icon_for Seminar, text: Seminar.model_name.human(count: 2)
-
+  /h2 = icon_for Seminar, text: Seminar.model_name.human(count: 2)
 .row
+  .col-md-9.col-md-offset-3
+    .page-header
+      h2
+        = title_for @seminars
+        .buttons = new_link new_seminar_path
+.row
+  .col-md-9.col-md-offset-3
+    | Filter
+section
   .col-md-3
-    ul.list-group
+    ul.nav.nav-pills.nav-stacked.categories
       - Category.cat_parents.order(:name).each do |category|
-        li.list-group-item
-          = link_to "#{category.name} (#{category.seminars.count})", '#', data: { category_id: category.id }, class: 'parent'
-          ul.list-unstyled style="margin-left: 20px;white-space:nowrap; overflow:hidden" class=('hidden' unless @category.in?(category.categories) || @category == category)
-            - category.categories.order(:name).each do |sub_cat|
-              - label = "#{sub_cat.name} (#{sub_cat.seminars.count})"
-              li = link_to label, '#', title: label, data: { category_id: sub_cat.id }, class: (sub_cat == @category ? 'active' : '')
+        - active = @category.in?(category.categories + [category])
+        li class=('active' if active)
+          - label = "#{category.name} (#{category.seminars.count})"
+          = link_to label, seminars_url(category_id: category.id), title: label
+          - if active
+            ul.nav.nav-pills.nav-stacked
+              - category.categories.order(:name).each do |sub_cat|
+                - label = "#{sub_cat.name} (#{sub_cat.seminars.count})"
+                li class=('active' if @category == sub_cat)
+                  = link_to label, seminars_url(category_id: sub_cat.id), title: label
 
-  .col-md-8 = render 'table', seminars: @seminars
+  .col-md-8 = render 'table', seminars: @seminars, header: false
 
 coffee:
   $ ->
-    $('.list-group-item a.parent').click (e) ->
-      e.preventDefault()
-      $(e.target).siblings('ul').toggleClass('hidden')
-    $('.list-group-item a').click (e) ->
-      e.preventDefault()
-      categoryId = $(e.target).data('category-id')
-      Turbolinks.visit('/seminars?cat_id=' + categoryId)
+    $('.categories').mouseenter ->
+
+sass:
+  ul.categories
+    /*white-space: nowrap*/
+    overflow: hidden
+    ul
+      margin: 2px 0 7px 20px
+      a
+        padding: 3px 8px
+        font-size: small
