--- a/app/views/seminars/show/_teachers.html.slim
+++ b/app/views/seminars/show/_teachers.html.slim
@@ -1,3 +1,3 @@
 ul.list-inline
   - @seminar.teachers.each do |teacher|
-    li = link_to icon_for(teacher, text: teacher.name), teacher
+    li = link_to icon_for(teacher, text: teacher.name, size: 2), teacher
