--- a/app/views/locations/show.html.slim
+++ b/app/views/locations/show.html.slim
@@ -5,4 +5,4 @@
 
 = render 'form'
 
-= render 'seminars/table', seminars: @location.seminars, scope: :location
+/= render 'seminars/table', seminars: @location.seminars, scope: :location
