add number to category for correct sorting

--- a/app/views/categories/_form.html.slim
+++ b/app/views/categories/_form.html.slim
@@ -9,7 +9,10 @@
     .col-md-6
       .form-inputs
         = f.association :category
-    .col-md-6
+    .col-md-1
+      .form-inputs
+        = f.input :number
+    .col-md-5
       .form-inputs
         = f.input :name
 
