no colors for attendees or bookings

--- a/app/views/seminars/show/_attendees.html.slim
+++ b/app/views/seminars/show/_attendees.html.slim
@@ -7,6 +7,6 @@ h4
 .table-responsive
   table.standard-table.table-clickable
     - @seminar.attendees.order(:last_name).each do |attendee|
-      tr data={url: url_for(attendee.booking)} class=css_class_for(attendee.booking)
+      tr data={url: url_for(attendee.booking)}
         td = attendee.name
         td = attendee.booking.company ? attendee.booking.company_name : ''
