--- a/app/views/visitors/index.html.slim
+++ b/app/views/visitors/index.html.slim
@@ -1,19 +1,22 @@
-- @category = @category.category if @category&.category.present?
+- if @category.parent?
+  - parent = @category
+- else
+  - parent = @category.category
 section
   .categories
-    ul
+    h4 Thema
+    ol
       - @categories.each do |category|
-        - active = @category&.in?(category.categories + [category])
-        li class=('active' if active)
-          - label = "#{category.display_name} (#{category.seminars.count + category.categories.map {|cat| cat.seminars.count }.sum})"
-          strong = link_to label, root_url(category_id: category.id), title: label
+        li class=('active' if parent == category)
+          - label = "#{category.name} (#{category.seminars.count + category.categories.map {|cat| cat.seminars.count }.sum})"
+          = link_to label, root_url(category_id: category.id), title: label
   .subcategories
+    h4 Unterthema
     - if @category
-      ul
-        - @category.categories.each do |category|
-          - active = @category.in?(category.categories + [category])
-          li class=('active' if active)
-            - label = "#{category.display_name} (#{category.seminars.count + category.categories.map {|cat| cat.seminars.count }.sum})"
+      ol
+        - parent.categories.each do |category|
+          li class=('active' if @category == category)
+            - label = "#{category.name} (#{category.seminars.count})"
             = link_to label, root_url(category_id: category.id), title: label
 
 table
@@ -27,21 +30,28 @@ table
 sass:
   section
     width: 100%
-    height: 300px
+    height: 330px
     margin: auto
     padding: 10px
     .categories
-      width: 50%
-      height: 300px
+      width: 45%
+      height: 330px
       float: left
     .subcategories
       margin-left: 50%
-      height: 300px
-    ul
-      list-style: none
+      height: 330px
+      ol
+        list-style-type: upper-latin
+    ol
+      /*list-style: none*/
+      padding-left: 17px
       li
         padding: 5px
-
+        &.active
+          a
+            font-weight: bold
+          /*list-style: disc*/
+          /*background: grey*/
     a
       color: red
       text-decoration: none
@@ -51,6 +61,7 @@ sass:
   table
     td
       padding: 3px
+      vertical-align: top
       &.number
         width: 80px
 
